force-app/main/default/objects/Policy__c/fields/Is_Conflict_Systems__c.field-meta.xml
<CustomField>
    <fullName>Is_Conflict_Systems__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Conflict Systems</label>
    <type>Checkbox</type>
</CustomField>