force-app/main/default/objects/Policy__c/fields/Is_Docket_Conflict_Coordination__c.field-meta.xml
<CustomField>
    <fullName>Is_Docket_Conflict_Coordination__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Docket/Conflict Coordination</label>
    <type>Checkbox</type>
</CustomField>