force-app/main/default/objects/Policy__c/fields/Is_ERE__c.field-meta.xml
<CustomField>
    <fullName>Is_ERE__c</fullName>
    <formula>IF (ISNULL(ERE_Date__c), false, true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is ERE</label>
    <type>Checkbox</type>
</CustomField>