force-app/main/default/objects/Policy__c/fields/Is_Fee_Suits__c.field-meta.xml
<CustomField>
    <fullName>Is_Fee_Suits__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Fee Suits</label>
    <type>Checkbox</type>
</CustomField>