force-app/main/default/objects/Policy__c/fields/Is_First_Billing_Created__c.field-meta.xml
<CustomField>
    <fullName>Is_First_Billing_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is First Billing Created</label>
    <type>Checkbox</type>
</CustomField>