force-app/main/default/objects/Policy__c/fields/Is_General_Override_BO__c.field-meta.xml
<CustomField>
    <fullName>Is_General_Override_BO__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is General Override</label>
    <type>Checkbox</type>
</CustomField>