force-app/main/default/objects/Policy__c/fields/Is_General_Override_FM__c.field-meta.xml
<CustomField>
    <fullName>Is_General_Override_FM__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is General Override FM</label>
    <type>Checkbox</type>
</CustomField>