force-app/main/default/objects/Policy__c/fields/Is_Inquiry__c.field-meta.xml
<CustomField>
    <fullName>Is_Inquiry__c</fullName>
    <description>Is Inquiry Application</description>
    <formula>ISPICKVAL(Status__c, &apos;Inquiry&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Inquiry</label>
    <type>Checkbox</type>
</CustomField>