force-app/main/default/objects/Policy__c/fields/Is_Lost__c.field-meta.xml
<CustomField>
    <fullName>Is_Lost__c</fullName>
    <formula>OR(ISPICKVAL(
Status__c, &apos;Rejected&apos;)
,ISPICKVAL(Status__c, &apos;Lost&apos;)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Lost</label>
    <type>Checkbox</type>
</CustomField>