force-app/main/default/objects/Policy__c/fields/Is_Merger_Acquisition_Activity__c.field-meta.xml
<CustomField>
    <fullName>Is_Merger_Acquisition_Activity__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Merger / Acquisition Activity</label>
    <type>Checkbox</type>
</CustomField>