force-app/main/default/objects/Policy__c/fields/Is_New_Business__c.field-meta.xml
<CustomField>
    <fullName>Is_New_Business__c</fullName>
    <description>Is New Business Application Type</description>
    <formula>ISPICKVAL(Application_Type__c, &apos;New Business&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is New Business</label>
    <type>Checkbox</type>
</CustomField>