force-app/main/default/objects/Policy__c/fields/Is_Number_and_Location_other_states__c.field-meta.xml
<CustomField>
    <fullName>Is_Number_and_Location_other_states__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Number and Location-other states</label>
    <type>Checkbox</type>
</CustomField>