force-app/main/default/objects/Policy__c/fields/Is_Partner_s_in_Branch_Office__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_s_in_Branch_Office__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner(s) in Branch Office</label>
    <type>Checkbox</type>
</CustomField>