force-app/main/default/objects/Policy__c/fields/Is_Partner_to_Associate_ratio__c.field-meta.xml
<CustomField>
    <fullName>Is_Partner_to_Associate_ratio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Partner to Associate ratio</label>
    <type>Checkbox</type>
</CustomField>