force-app/main/default/objects/Policy__c/fields/Is_Peer_Review_Procedures__c.field-meta.xml
<CustomField>
    <fullName>Is_Peer_Review_Procedures__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Peer Review Procedures</label>
    <type>Checkbox</type>
</CustomField>