force-app/main/default/objects/Policy__c/fields/Is_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_Policy__c</fullName>
    <description>Record is a policy but excludes ERP policies.</description>
    <formula>IF(RecordType.Name = &quot;Policy&quot;, true, false) &amp;&amp; Type__c &lt;&gt; &quot;ERP Policy&quot; &amp;&amp; (Is_Cancel_Flat__c == false)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Record is a policy but excludes ERP policies.</inlineHelpText>
    <label>Is Policy</label>
    <type>Checkbox</type>
</CustomField>