force-app/main/default/objects/Policy__c/fields/Is_Rejected_Confirm__c.field-meta.xml
<CustomField>
    <fullName>Is_Rejected_Confirm__c</fullName>
    <defaultValue>false</defaultValue>
    <description>If Application status = Rejected and Is_Rejected_Confirm=Yes then Opportunity stages would be Rejected.</description>
    <label>Is Rejected Confirm</label>
    <type>Checkbox</type>
</CustomField>