force-app/main/default/objects/Policy__c/fields/Is_Rewrite__c.field-meta.xml
<CustomField>
    <fullName>Is_Rewrite__c</fullName>
    <description>Determines if this policy is a cancel/rewrite for a previous policy</description>
    <formula>IF ( Policy_Series_Count__c == 1 || (Policy_Series_Count__c  &lt;&gt;  Previous_Policy__r.Policy_Series_Count__c + 1), false,
IF (
    MONTH(Effective_Date__c) == MONTH(Previous_Policy__r.Effective_Date__c)
     &amp;&amp; DAY(Effective_Date__c) == DAY(Previous_Policy__r.Effective_Date__c)
    , false, true))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Rewrite</label>
    <type>Checkbox</type>
</CustomField>