force-app/main/default/objects/Policy__c/fields/Is_Risk_Management_Mgmt_Committee__c.field-meta.xml
<CustomField>
    <fullName>Is_Risk_Management_Mgmt_Committee__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Risk Management - Mgmt. Committee</label>
    <type>Checkbox</type>
</CustomField>