force-app/main/default/objects/Policy__c/fields/Is_Size_of_Firm__c.field-meta.xml
<CustomField>
    <fullName>Is_Size_of_Firm__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Size of Firm</label>
    <type>Checkbox</type>
</CustomField>