force-app/main/default/objects/Policy__c/fields/Is_Stability_of_Senior_Management__c.field-meta.xml
<CustomField>
    <fullName>Is_Stability_of_Senior_Management__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Stability of Senior Management</label>
    <type>Checkbox</type>
</CustomField>