force-app/main/default/objects/Policy__c/fields/Is_Staff_to_Attorney_Ratio__c.field-meta.xml
<CustomField>
    <fullName>Is_Staff_to_Attorney_Ratio__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Staff to Attorney Ratio</label>
    <type>Checkbox</type>
</CustomField>