force-app/main/default/objects/Policy__c/fields/Is_Use_of_Client_Engagement_Contingency__c.field-meta.xml
<CustomField>
    <fullName>Is_Use_of_Client_Engagement_Contingency__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Use of  Client Engagement/Contingency</label>
    <type>Checkbox</type>
</CustomField>