force-app/main/default/objects/Policy__c/fields/Is_Use_of_Declination_Non_Engagement__c.field-meta.xml
<CustomField>
    <fullName>Is_Use_of_Declination_Non_Engagement__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Use of  Declination/Non-Engagement</label>
    <type>Checkbox</type>
</CustomField>