force-app/main/default/objects/Policy__c/fields/Is_Use_of_Referral_Letters__c.field-meta.xml
<CustomField>
    <fullName>Is_Use_of_Referral_Letters__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Use of  Referral Letters</label>
    <type>Checkbox</type>
</CustomField>