force-app/main/default/objects/Policy__c/fields/Is_Use_of_Settlement_Agreements__c.field-meta.xml
<CustomField>
    <fullName>Is_Use_of_Settlement_Agreements__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Use of  Settlement Agreements</label>
    <type>Checkbox</type>
</CustomField>