force-app/main/default/objects/Policy__c/fields/Is_Valid_Policy__c.field-meta.xml
<CustomField>
    <fullName>Is_Valid_Policy__c</fullName>
    <formula>RecordType.DeveloperName = &apos;Policy&apos; &amp;&amp; If(Effective_Date__c = Cancel_Date__c,false,true)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Is Valid Policy</label>
    <type>Checkbox</type>
</CustomField>