force-app/main/default/objects/Policy__c/fields/ISBAM_Automatic_Renewal_Eligible__c.field-meta.xml
<CustomField>
    <fullName>ISBAM_Automatic_Renewal_Eligible__c</fullName>
    <description>Policies Eligible for Automatic Renewal Invoice</description>
    <formula>Account_Open_Claims__c = 0
&amp;&amp; ISPICKVAL(Renewal_Type__c,&quot;Online Invoice&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ISBAM Automatic Renewal Eligible</label>
    <type>Checkbox</type>
</CustomField>