force-app/main/default/objects/Policy__c/fields/ISBAM_Automatic_Renewal_Send__c.field-meta.xml
<CustomField>
    <fullName>ISBAM_Automatic_Renewal_Send__c</fullName>
    <formula>ISPICKVAL( Status__c ,&quot;Approved&quot;)
&amp;&amp; ISPICKVAL(Renewal_Type__c,&quot;Online Invoice&quot;)
&amp;&amp; Effective_Date__c&gt;= DATE(2025,1,1) &amp;&amp; Effective_Date__c &lt;=  (TODAY() + 40) &amp;&amp;  RecordType.Name = &apos;Application&apos;</formula>
    <label>ISBAM Automatic Renewal Send</label>
    <type>Checkbox</type>
</CustomField>