force-app/main/default/objects/Policy__c/fields/ISBAM_policy_dividend__c.field-meta.xml
<CustomField>
    <fullName>ISBAM_policy_dividend__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Dividend value calculated when application was created</description>
    <label>ISBAM Policy Dividend</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>