force-app/main/default/objects/Policy__c/fields/ISBAM_user_agent__c.field-meta.xml
<CustomField>
    <fullName>ISBAM_user_agent__c</fullName>
    <label>ISBAM user agent</label>
    <length>7304</length>
    <type>LongTextArea</type>
</CustomField>