force-app/main/default/objects/Policy__c/fields/IsRisk_Management_Outside_Interests__c.field-meta.xml
<CustomField>
    <fullName>IsRisk_Management_Outside_Interests__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Risk Management - Outside Interests</label>
    <type>Checkbox</type>
</CustomField>