force-app/main/default/objects/Policy__c/fields/Issue_Date_History__c.field-meta.xml
<CustomField>
    <fullName>Issue_Date_History__c</fullName>
    <label>Issue Date History</label>
    <type>Date</type>
</CustomField>