force-app/main/default/objects/Policy__c/fields/Latest_Activity_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Activity_Date__c</fullName>
    <label>Latest Activity Date</label>
    <type>Date</type>
</CustomField>