force-app/main/default/objects/Policy__c/fields/Latest_Activity_Type__c.field-meta.xml
<CustomField>
    <fullName>Latest_Activity_Type__c</fullName>
    <label>Latest Activity Type</label>
    <length>255</length>
    <type>Text</type>
</CustomField>