force-app/main/default/objects/Policy__c/fields/Latest_Policy_Effective_Date__c.field-meta.xml
<CustomField>
    <fullName>Latest_Policy_Effective_Date__c</fullName>
    <description>Most Recent Policy Effective Date for Account</description>
    <formula>Account__r.Recent_Policy_Lookup__r.Effective_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Policy Effective Date</label>
    <type>Date</type>
</CustomField>