force-app/main/default/objects/Policy__c/fields/Latest_Policy_isCanceled__c.field-meta.xml
<CustomField>
    <fullName>Latest_Policy_isCanceled__c</fullName>
    <formula>Account__r.Recent_Policy_Lookup__r.Is_Canceled__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Latest Policy Is Canceled</label>
    <type>Checkbox</type>
</CustomField>