force-app/main/default/objects/Policy__c/fields/Lawyer_10x10__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_10x10__c</fullName>
    <label>Lawyer 10x10</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>