force-app/main/default/objects/Policy__c/fields/Lawyer_5x5__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_5x5__c</fullName>
    <label>Lawyer 5x5</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>