force-app/main/default/objects/Policy__c/fields/Lawyer_Excess__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Excess__c</fullName>
    <label>zzzLawyer Excess</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>