force-app/main/default/objects/Policy__c/fields/Lawyer_Primary__c.field-meta.xml
<CustomField>
    <fullName>Lawyer_Primary__c</fullName>
    <label>Lawyer Primary</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>