force-app/main/default/objects/Policy__c/fields/Legacy_AOP_List__c.field-meta.xml
<CustomField>
    <fullName>Legacy_AOP_List__c</fullName>
    <label>Legacy_AOP_List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>