force-app/main/default/objects/Policy__c/fields/Legacy_Endorsement_List__c.field-meta.xml
<CustomField>
    <fullName>Legacy_Endorsement_List__c</fullName>
    <description>List of Import Endorsements</description>
    <label>Legacy_Endorsement_List</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>