force-app/main/default/objects/Policy__c/fields/Limit__c.field-meta.xml
<CustomField>
    <fullName>Limit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Limits</label>
    <referenceTo>ILF_Coverage_Factor__c</referenceTo>
    <relationshipLabel>Application/Policy</relationshipLabel>
    <relationshipName>Application_Policy</relationshipName>
    <type>Lookup</type>
</CustomField>