force-app/main/default/objects/Policy__c/fields/Limit_Factor_Value__c.field-meta.xml
<CustomField>
    <fullName>Limit_Factor_Value__c</fullName>
    <formula>Limit__r.Factor_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Limit Factor Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>