force-app/main/default/objects/Policy__c/fields/Limits__c.field-meta.xml
<CustomField>
    <fullName>Limits__c</fullName>
    <formula>Limit__r.Name</formula>
    <label>Limits</label>
    <type>Text</type>
</CustomField>