force-app/main/default/objects/Policy__c/fields/Lost_Description__c.field-meta.xml
<CustomField>
    <fullName>Lost_Description__c</fullName>
    <label>Lost Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>