force-app/main/default/objects/Policy__c/fields/Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason__c</fullName>
    <label>Lost Reason</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Coverage</fullName>
            </value>
            <value>
                <fullName>Practice Closed</fullName>
            </value>
            <value>
                <fullName>Premium</fullName>
            </value>
            <value>
                <fullName>Licensed Suspension</fullName>
            </value>
            <value>
                <fullName>Non-Renewal</fullName>
            </value>
            <value>
                <fullName>Employment</fullName>
            </value>
            <value>
                <fullName>ISBA Membership Cost</fullName>
            </value>
            <value>
                <fullName>Cancelation</fullName>
            </value>
            <value>
                <fullName>Propestive Practice</fullName>
            </value>
            <value>
                <fullName>Online Inquiry Only</fullName>
            </value>
            <value>
                <fullName>No Response</fullName>
            </value>
            <value>
                <fullName>-</fullName>
                <isActive>false</isActive>
                <label>--------------------------------------------</label>
            </value>
            <value>
                <fullName>Bar Membership</fullName>
                <isActive>false</isActive>
                <label>Bar Membership</label>
            </value>
            <value>
                <fullName>CUSTOMER - Bar Membership</fullName>
                <isActive>false</isActive>
                <label>CUSTOMER - Bar Membership</label>
            </value>
            <value>
                <fullName>CUSTOMER - Complaint</fullName>
                <isActive>false</isActive>
                <label>CUSTOMER - Complaint</label>
            </value>
            <value>
                <fullName>CUSTOMER - Coverage</fullName>
                <isActive>false</isActive>
                <label>CUSTOMER - Coverage</label>
            </value>
            <value>
                <fullName>CUSTOMER - ERE</fullName>
                <isActive>false</isActive>
                <label>CUSTOMER - ERE</label>
            </value>
            <value>
                <fullName>CUSTOMER - Other</fullName>
                <isActive>false</isActive>
                <label>CUSTOMER - Other</label>
            </value>
            <value>
                <fullName>CUSTOMER - Practice Closed</fullName>
                <isActive>false</isActive>
                <label>CUSTOMER - Practice Closed</label>
            </value>
            <value>
                <fullName>CUSTOMER - Price</fullName>
                <isActive>false</isActive>
                <label>CUSTOMER - Price</label>
            </value>
            <value>
                <fullName>Cancel renewal policy FLAT due to no payment of premium</fullName>
                <isActive>false</isActive>
                <label>Cancel renewal policy FLAT due to no payment of premium</label>
            </value>
            <value>
                <fullName>Claims Experience</fullName>
                <isActive>false</isActive>
                <label>Claims Experience</label>
            </value>
            <value>
                <fullName>Disciplinary Issues</fullName>
                <isActive>false</isActive>
                <label>Disciplinary Issues</label>
            </value>
            <value>
                <fullName>Dissolved</fullName>
                <isActive>false</isActive>
                <label>Dissolved</label>
            </value>
            <value>
                <fullName>ERE</fullName>
                <isActive>false</isActive>
                <label>ERE</label>
            </value>
            <value>
                <fullName>IMPORT</fullName>
                <isActive>false</isActive>
                <label>IMPORT</label>
            </value>
            <value>
                <fullName>ISBAM - Claims</fullName>
                <isActive>false</isActive>
                <label>ISBAM - Claims</label>
            </value>
            <value>
                <fullName>ISBAM - Disciplinary Issues</fullName>
                <isActive>false</isActive>
                <label>ISBAM - Disciplinary Issues</label>
            </value>
            <value>
                <fullName>ISBAM - IMPORT</fullName>
                <isActive>false</isActive>
                <label>ISBAM - IMPORT</label>
            </value>
            <value>
                <fullName>ISBAM - Internal Procedures</fullName>
                <isActive>false</isActive>
                <label>ISBAM - Internal Procedures</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>