force-app/main/default/objects/Policy__c/fields/Lost_Reason_Sub1__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Sub1__c</fullName>
    <label>Lost Reason Sub1</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retirement ERP (Free ERP)</fullName>
            </value>
            <value>
                <fullName>Firm Optional ERP (Bought)</fullName>
            </value>
            <value>
                <fullName>Individual Retirement ERP (Bought)</fullName>
            </value>
            <value>
                <fullName>Deceased/Disability-ERP (Free)</fullName>
            </value>
            <value>
                <fullName>No Cyber</fullName>
            </value>
            <value>
                <fullName>Competitor</fullName>
            </value>
            <value>
                <fullName>Bare (no income from business)</fullName>
            </value>
            <value>
                <fullName>Bare (too expensive)</fullName>
            </value>
            <value>
                <fullName>Government Position</fullName>
            </value>
            <value>
                <fullName>In- House</fullName>
            </value>
            <value>
                <fullName>Employed with another Firm</fullName>
            </value>
            <value>
                <fullName>Formed Partnership</fullName>
            </value>
            <value>
                <fullName>Merged with Another Firm (sold business)</fullName>
            </value>
            <value>
                <fullName>Duplicate - set up incorrectly cancelled flat</fullName>
            </value>
            <value>
                <fullName>Cancel Flat - due to non-payment of premium</fullName>
            </value>
            <value>
                <fullName>Retirement</fullName>
            </value>
            <value>
                <fullName>Dissolved</fullName>
            </value>
            <value>
                <fullName>Merged</fullName>
            </value>
            <value>
                <fullName>Moved Out of State</fullName>
                <label>Moved Out Of State</label>
            </value>
            <value>
                <fullName>COI</fullName>
                <isActive>false</isActive>
                <label>COI</label>
            </value>
            <value>
                <fullName>Competition</fullName>
                <isActive>false</isActive>
                <label>Competition</label>
            </value>
            <value>
                <fullName>Cust-Bar membership</fullName>
                <isActive>false</isActive>
                <label>Cust-Bar membership</label>
            </value>
            <value>
                <fullName>DDR</fullName>
                <isActive>false</isActive>
                <label>DDR</label>
            </value>
            <value>
                <fullName>Disbarment</fullName>
                <isActive>false</isActive>
                <label>Disbarment</label>
            </value>
            <value>
                <fullName>Docket</fullName>
                <isActive>false</isActive>
                <label>Docket</label>
            </value>
            <value>
                <fullName>Firm Dissolved (multi lawyer firm)</fullName>
                <isActive>false</isActive>
                <label>Firm Dissolved (multi lawyer firm)</label>
            </value>
            <value>
                <fullName>Increase Policy of Limits of Liability</fullName>
                <isActive>false</isActive>
                <label>Increase Policy of Limits of Liability</label>
            </value>
            <value>
                <fullName>Merged with/joined another Firm</fullName>
                <isActive>false</isActive>
                <label>Merged with/joined another Firm</label>
            </value>
            <value>
                <fullName>Military</fullName>
                <isActive>false</isActive>
                <label>Military</label>
            </value>
            <value>
                <fullName>New Job</fullName>
                <isActive>false</isActive>
                <label>New Job</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>