force-app/main/default/objects/Policy__c/fields/Lost_Reason_Sub2__c.field-meta.xml
<CustomField>
    <fullName>Lost_Reason_Sub2__c</fullName>
    <label>Lost Reason Sub2</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Lost_Reason_Sub1__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>New firm - Potential Prospect</fullName>
            </value>
            <value>
                <fullName>New firm - not a Prospect</fullName>
            </value>
            <value>
                <fullName>ISBA Mutual Insured</fullName>
            </value>
            <value>
                <fullName>Government</fullName>
            </value>
            <value>
                <fullName>Quitting the Practice of Law</fullName>
            </value>
            <value>
                <fullName>Employment - not private practice</fullName>
            </value>
            <value>
                <fullName>ISBA Membership cost</fullName>
            </value>
            <value>
                <fullName>Other Private Practice</fullName>
                <isActive>false</isActive>
                <label>Other Private Practice</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>