force-app/main/default/objects/Policy__c/fields/Master_Factor_Default__c.field-meta.xml
<CustomField>
    <fullName>Master_Factor_Default__c</fullName>
    <label>Master Factor Default</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Yes</fullName>
            </value>
            <value>
                <fullName>No</fullName>
            </value>
            <value>
                <fullName>All</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>