force-app/main/default/objects/Policy__c/fields/Merger_Acquisition_Activity__c.field-meta.xml
<CustomField>
    <fullName>Merger_Acquisition_Activity__c</fullName>
    <defaultValue>0</defaultValue>
    <label>Merger / Acquisition Activity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>