force-app/main/default/objects/Policy__c/fields/Merger_Acquisition_Activity_Comment__c.field-meta.xml
<CustomField>
    <fullName>Merger_Acquisition_Activity_Comment__c</fullName>
    <label>Merger / Acquisition Activity Comment</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>