force-app/main/default/objects/Policy__c/fields/Mini_Tail_Override_Date__c.field-meta.xml
<CustomField>
    <fullName>Mini_Tail_Override_Date__c</fullName>
    <label>Mini Tail Date</label>
    <type>Date</type>
</CustomField>