force-app/main/default/objects/Policy__c/fields/Mod_230__c.field-meta.xml
<CustomField>
    <fullName>Mod_230__c</fullName>
    <label>Mod_230</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>