force-app/main/default/objects/Policy__c/fields/Mod_234__c.field-meta.xml
<CustomField>
    <fullName>Mod_234__c</fullName>
    <label>Mod_234</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>