force-app/main/default/objects/Policy__c/fields/Mod_261__c.field-meta.xml
<CustomField>
    <fullName>Mod_261__c</fullName>
    <label>Mod_261</label>
    <precision>3</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>