force-app/main/default/objects/Policy__c/fields/NBA_Active_Lawyer_Count__c.field-meta.xml
<CustomField>
    <fullName>NBA_Active_Lawyer_Count__c</fullName>
    <formula>if ( report_nba_counter__c  = 1, Active_Laywers__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBA Active Lawyer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>