force-app/main/default/objects/Policy__c/fields/NBA_App_Source__c.field-meta.xml
<CustomField>
    <fullName>NBA_App_Source__c</fullName>
    <label>NBA App Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>NBA_App_Source</valueSetName>
    </valueSet>
</CustomField>