force-app/main/default/objects/Policy__c/fields/NBA_App_Source_Info__c.field-meta.xml
<CustomField>
    <fullName>NBA_App_Source_Info__c</fullName>
    <label>NBA App Source Info</label>
    <length>100</length>
    <type>Text</type>
</CustomField>