force-app/main/default/objects/Policy__c/fields/NBA_Original_Premium__c.field-meta.xml
<CustomField>
    <fullName>NBA_Original_Premium__c</fullName>
    <formula>if ( report_nba_counter__c  = 1, Original_Premium__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBA Original Premium</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>