force-app/main/default/objects/Policy__c/fields/NBA_Total_Lawyer_Count__c.field-meta.xml
<CustomField>
    <fullName>NBA_Total_Lawyer_Count__c</fullName>
    <formula>if ( report_nba_counter__c  = 1, Total_Lawyers__c, 0)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>NBA Total Lawyer Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>