force-app/main/default/objects/Policy__c/fields/Next_Policy__c.field-meta.xml
<CustomField>
    <fullName>Next_Policy__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Next Policy</label>
    <referenceTo>Policy__c</referenceTo>
    <relationshipLabel>Application/Policy (Next Policy)</relationshipLabel>
    <relationshipName>Application_Policy1</relationshipName>
    <type>Lookup</type>
</CustomField>